cambio de estilos y nuevos componetnes

--- a/src/app/core/components/notification-icon/notification-icon.component.html
+++ b/src/app/core/components/notification-icon/notification-icon.component.html
@@ -1,4 +1,4 @@
-<ion-button>
+<ion-button (click)="viewNotifications()">
   <ion-icon slot="icon-only" name="notifications-outline"></ion-icon>
   <ion-badge color="danger" *ngIf="newNotifications" >{{newNotifications}}</ion-badge>
 </ion-button>
