--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -37,10 +37,10 @@
       <ion-icon name="briefcase" slot="start"></ion-icon>
       <ion-label>Empleos</ion-label>
     </ion-item>
-    <ion-item (click)="viewRedirect('/app/tabs/coupons')">
+    <!-- <ion-item (click)="viewRedirect('/app/tabs/coupons')">
       <ion-icon name="pricetags" slot="start"></ion-icon>
       <ion-label>Cupones</ion-label>
-    </ion-item>
+    </ion-item> -->
     <ion-item-divider>
       <ion-label> Mi Cuenta </ion-label>
     </ion-item-divider>
