--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -12,9 +12,9 @@
       <ion-icon name="add-circle-outline"></ion-icon>
       <ion-label>Vende</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="coupons">
-      <ion-icon name="pricetags-outline"></ion-icon>
-      <ion-label>Cupones</ion-label>
+    <ion-tab-button tab="launch">
+      <ion-icon name="flag" ></ion-icon>
+      <ion-label>Emprende</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="menu">
       <ion-icon name="ellipsis-horizontal-circle-outline"></ion-icon>
