Add logo in the main header

--- a/src/app/core/components/header-bar/header-bar.component.html
+++ b/src/app/core/components/header-bar/header-bar.component.html
@@ -4,7 +4,10 @@
       <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
     </ion-button>
   </ion-buttons> -->
-  <ion-title [textContent]="title ? title : 'tianguis'">
+  <ion-title >
+    <img class="intro__img" alt="Tianguis" src="../../assets/images/tianguis-name.png" />
+
+
   </ion-title>
   <ion-buttons slot="end">
     <app-notification-icon [newNotifications]="10"></app-notification-icon>
