--- a/src/app/markteplace/components/category-list/category-list.component.html
+++ b/src/app/markteplace/components/category-list/category-list.component.html
@@ -1,22 +1,12 @@
 <ion-text color="dark">
   <h4 class="title-section">Categorias</h4>
 </ion-text>
-<swiper
-  [slidesPerView]="3"
-  [spaceBetween]="2"
-  
-  class="mySwiper"
-  
->
-  <ng-template swiperSlide *ngFor="let category of categories" class="ion-align-items-stretch">
-    <app-category-card  [category]="category"></app-category-card>
+<swiper [slidesPerView]="3" [spaceBetween]="2" class="mySwiper">
+  <ng-template
+    swiperSlide
+    *ngFor="let category of categories"
+    class="ion-align-items-stretch"
+  >
+    <app-category-card [category]="category"></app-category-card>
   </ng-template>
-
-   
-
-
-   
-
-
-   
 </swiper>
