--- a/src/app/markteplace/components/product-card/product-card.component.html
+++ b/src/app/markteplace/components/product-card/product-card.component.html
@@ -1,30 +1,10 @@
-<!-- <ion-card>
-  <img src="{{product.images[0]}}" />
-  <ion-card-header>
-    <ion-row >
-      <ion-col class="ion-text-start p-0" center>
-         <ion-card-subtitle ><ion-icon name="star"></ion-icon> {{product.rating}} </ion-card-subtitle>
-      </ion-col> 
-      <ion-col class="ion-text-end p-0">
-        <ion-icon name="heart" class="favorite"></ion-icon>
-      </ion-col>
-    </ion-row>
-    <ion-card-title  class="text-title">{{product.name}}</ion-card-title>
-  </ion-card-header>
-  <ion-card-content>
-    <ion-card-title *ngIf="product.oldPrice >0" class="price-desc-title"><del>{{product.oldPrice | currency:'Q'}}</del> </ion-card-title>
-  <ion-card-title class="price-title">{{product.price | currency:'Q'}}</ion-card-title>
-  </ion-card-content>
-</ion-card>
- -->
 <div class="offer">
-
-  <img class="offer__image"  src="{{product.images[0]}}" /> 
+  <img class="offer__image" src="{{ product.images[0] }}" />
   <div class="offer__header">
     <div class="offer__header--price">
-      {{product.price | currency:'Q'}}
-      <div *ngIf="product.oldPrice >0" class="offer__header--price--old">
-        <del>{{product.oldPrice | currency:'Q'}}</del> 
+      {{ product.price | currency: "Q" }}
+      <div *ngIf="product.oldPrice > 0" class="offer__header--price--old">
+        <del>{{ product.oldPrice | currency: "Q" }}</del>
       </div>
     </div>
 
@@ -34,13 +14,10 @@
   </div>
   <div class="offer__title">
     <div class="offer__title--name">
-      {{product.name}}
-      
+      {{ product.name }}
     </div>
     <div class="offer__title--rating">
-      <ion-icon name="star"></ion-icon> {{product.rating}} 
+      <ion-icon name="star"></ion-icon> {{ product.rating }}
     </div>
   </div>
-
-
 </div>
