--- a/src/app/markteplace/components/profile-card/profile-card.component.html
+++ b/src/app/markteplace/components/profile-card/profile-card.component.html
@@ -1,55 +1,25 @@
-<!-- <ion-card>
-
- 
-<div class="img-profile">
-  <ion-avatar>
-    <img src="{{profile.photo}}">
-  </ion-avatar>
-</div >
-  
-<ion-card-header>
-  <ion-card-title class="ion-text-center">{{profile.name}}</ion-card-title>
-  <ion-card-subtitle class="ion-text-center"><ion-icon name="star"></ion-icon> {{profile.rating}} </ion-card-subtitle>
-</ion-card-header>
-  <ion-card-content>
-   <ion-row>
-     <ion-col size="8" class="ion-text-start">
-       <p><ion-icon name="pricetags"></ion-icon>: {{profile.sales}}</p>
-       <p><ion-icon name="albums"></ion-icon>: {{profile.products}}</p>
-
-     </ion-col >
-     <ion-col size="4" class="ion-text-end"> 
-      <ion-icon name="heart" class="favorite"></ion-icon>
-     </ion-col>
-   </ion-row>
-  </ion-card-content>
-
-</ion-card> -->
-
 <div class="profile">
-  <img class="profile__image-avatar" src="{{profile.photo}}">
+  <img class="profile__image-avatar" src="{{ profile.photo }}" />
   <div class="profile__title">
-    {{profile.name}}
+    {{ profile.name }}
   </div>
 
   <div class="profile__favorite">
     <div class="profile__favorite--text">
-      {{profile.products}}
+      {{ profile.products }}
       <div>Productos</div>
-       
     </div>
     <div class="profile__favorite--rating">
-      <ion-icon name="star"></ion-icon> {{profile.rating}}
+      <ion-icon name="star"></ion-icon> {{ profile.rating }}
     </div>
   </div>
-  
+
   <div class="profile__footer">
     <div class="profile__footer--text">
-      {{profile.sales}}
+      {{ profile.sales }}
       <div>Ventas</div>
     </div>
     <div class="profile__footer--heart">
-      
       <ion-icon name="heart-outline" class=""></ion-icon>
     </div>
   </div>
