--- a/src/app/markteplace/pages/detail-profile/detail-profile.page.html
+++ b/src/app/markteplace/pages/detail-profile/detail-profile.page.html
@@ -38,29 +38,7 @@
     </div>
   </div>
 
-  <!-- <div class="img-profile">
-    <ion-avatar>
-      <img class="profile-photo" src="{{profile.photo}}" />
-    </ion-avatar>
-  </div>
- -->
-  <!-- <ion-card-header>
-    <ion-card-title class="ion-text-center">{{profile.name}}</ion-card-title>
-    <ion-card-subtitle class="ion-text-center"
-      ><ion-icon name="star"></ion-icon> {{profile.rating}}
-    </ion-card-subtitle>
-  </ion-card-header> -->
   <ion-card-content>
-    <!-- <ion-row>
-      <ion-col size="8" class="ion-text-start">
-        <p><ion-icon name="pricetags"></ion-icon> Ventas: {{profile.sales}}</p>
-        <p><ion-icon name="albums"></ion-icon> Productos: {{profile.products}}</p>
-      </ion-col>
-      <ion-col size="4" class="ion-text-end">
-        <ion-icon name="heart" class="favorite"></ion-icon>
-      </ion-col>
-    </ion-row> -->
-
     <!-- Nav -->
     <ion-segment
       value="vewProduct"
@@ -81,15 +59,10 @@
 
     <!-- Detail products -->
     <ion-list *ngIf="type === 'vewProduct'">
-      <ion-label>
-        Lista de Productos</ion-label>
+      <ion-label> Lista de Productos</ion-label>
       <ion-row>
-        <ion-col
-          size="12"
-          
-          *ngFor="let product of products[0]"
-        >
-        <app-product-card-hrz [product]="product"></app-product-card-hrz>
+        <ion-col size="12" *ngFor="let product of products[0]">
+          <app-product-card-hrz [product]="product"></app-product-card-hrz>
           <!-- <app-product-card [product]="product"></app-product-card> -->
         </ion-col>
       </ion-row>
