--- a/src/app/markteplace/components/product-card-hrz/product-card-hrz.component.scss
+++ b/src/app/markteplace/components/product-card-hrz/product-card-hrz.component.scss
@@ -43,6 +43,7 @@
         
         &--heart{
             font-size: 2rem;
+            color: var(--ion-color-favorite);
         }
 
         &--price{
