--- a/src/app/markteplace/components/profile-card/profile-card.component.scss
+++ b/src/app/markteplace/components/profile-card/profile-card.component.scss
@@ -60,6 +60,7 @@ ion-card-title  {
         margin: auto;
         padding: auto;
         font-size: 2em;
+        color: var(--ion-color-favorite);
         
       }
     }
