--- a/src/app/markteplace/components/recommended-profile-list/recommended-profile-list.component.html
+++ b/src/app/markteplace/components/recommended-profile-list/recommended-profile-list.component.html
@@ -11,7 +11,7 @@
 >
 
   <ng-template swiperSlide *ngFor="let profile of profiles" >
-    <app-profile-card  [profile]="profile" (click)="viewProfile(profile.id)"></app-profile-card>
+    <app-profile-card  [profile]="profile" ></app-profile-card>
   </ng-template>
 
    
