--- a/src/app/markteplace/components/product-card-hrz/product-card-hrz.component.html
+++ b/src/app/markteplace/components/product-card-hrz/product-card-hrz.component.html
@@ -1,9 +1,9 @@
 <div class="card-hrz">
-  <div class="card-hrz__col">
+  <div class="card-hrz__col" (click)="selectProduc(product.id)">
     <img class="card-hrz__col--image" src="{{ product.images }}" alt="" />
   </div>
   <div class="card-hrz__col--data">
-    <p class="card-hrz__col--data--name">{{ product.name }}</p>
+    <p class="card-hrz__col--data--name" (click)="selectProduc(product.id)">{{ product.name }}</p>
     <p class="card-hrz__col--data--rating"><ion-icon name="star"></ion-icon> {{product.rating}} </p>
     <div class="card-hrz__col--data--details">
       <div class="card-hrz__col--data--details--price">
@@ -13,7 +13,8 @@
         </div>
       </div>
       <div class="card-hrz__col--data--details--heart">
-        <ion-icon class="" name="heart-outline"></ion-icon>
+        <ion-icon (click)="eventFavorite(false)" *ngIf="product.favorite" slot="start" name="heart"></ion-icon>
+      <ion-icon (click)="eventFavorite(true)" *ngIf="!product.favorite" slot="start" name="heart-outline"></ion-icon>
       </div>
     </div>
     
