--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,6 +74,9 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /* Color Custom */
+  --ion-color-favorite: #f23636;
 }
 /* @media (prefers-color-scheme: dark)  */
 
