--- a/src/app/markteplace/components/category-card/category-card.component.html
+++ b/src/app/markteplace/components/category-card/category-card.component.html
@@ -1,4 +1,4 @@
-<div class="category">
+<div class="category" (click)="selectCategoryc(category.id)">
   <div class="category__title">
     {{ category.name }}
   </div>
