--- a/src/app/markteplace/components/launch/launch.component.html
+++ b/src/app/markteplace/components/launch/launch.component.html
@@ -12,7 +12,7 @@
   </ion-card-content>
   <ion-row>
     <ion-col>
-      <ion-button color="primary">Ver más</ion-button>
+      <ion-button color="primary" (click)="viewDetail(launch.id)">Ver más</ion-button>
     </ion-col>
   </ion-row>
 </ion-card>
