--- a/src/app/markteplace/pages/product/product.page.html
+++ b/src/app/markteplace/pages/product/product.page.html
@@ -41,13 +41,13 @@
         
         <ion-col><ion-badge color="medium">{{category.name}} </ion-badge> </ion-col>
       </div>
-    </ion-row>
-  
+    </ion-row>  
 
     <p>Descripción</p>
-    <ion-label> {{product.description}} </ion-label>
-
-    <ion-button expand="block" >Comprar</ion-button>
-  
+    <ion-label> {{product.description}} </ion-label>    
   </ion-card-content>
+  
 </ion-content>
+<ion-footer>
+  <ion-button expand="block" shape="round" >Comprar</ion-button>
+</ion-footer>
