Changing intro window styles

--- a/src/app/intro/intro.page.scss
+++ b/src/app/intro/intro.page.scss
@@ -1,23 +1,33 @@
 /* Without setting height the slides will take up the height of the slide's content */
-@import '~swiper/scss';
-@import '~swiper/scss/autoplay';
+@import "~swiper/scss";
+@import "~@ionic/angular/css/ionic-swiper";
+@import "~swiper/scss/autoplay";
 .intro {
-  
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-  justify-content: center;
-  align-items: center;
-  &__img{
-    width: 80%;
-    margin: auto;
-    padding: auto;
+  width: 100%;
+  height: 100%;
+  font-family: 'DM Sans', sans-serif;
+
+  &__content__image {
+    height: 25vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &--img {
+      width: 80%;
+      margin: auto;
+      padding: auto;
+    }
   }
+
   &__content {
+    height: 40vh;
     .swiper {
       width: 100%;
       height: 30vh;
     }
-    
+
     .swiper-slide {
       text-align: center;
       font-size: 12px;
@@ -36,18 +46,24 @@
       -webkit-align-items: center;
       align-items: center;
     }
-    
+
     .swiper-slide img {
       display: block;
       width: 100%;
       height: 100%;
       object-fit: cover;
     }
-    
-    .title-section{
+
+    &--title-section {
       font-weight: 700;
-      padding-left: 0.5em ;
-      padding-right: 0.5em ;
+      padding-left: 0.5em;
+      padding-right: 0.5em;
     }
+  }
+
+  &__btns{
+    height: 25vh;
+    width: 100%;
+    
   }
 }
