--- a/src/app/intro/intro.page.html
+++ b/src/app/intro/intro.page.html
@@ -51,18 +51,26 @@
   </ion-slides> -->
 
   <div class="intro">
-    <img class="intro__img" alt="Tianguis" src="../../assets/images/tianguis.png" />
+    <div class="intro__content__image">
+      <img class="intro__content__image--img" alt="Tianguis" src="../../assets/images/tianguis.png" />
+    </div>
+    
     <div class="intro__content">
-      <swiper class="mySwiper"
-        [autoplay]="{
-        delay: 2500,
-        disableOnInteraction: false
-      } "
+      <swiper 
+      [spaceBetween]="30"
+    [centeredSlides]="true"
+    [autoplay]="{
+      delay: 3000,
+      disableOnInteraction: false
+    }"
+    [pagination]="{
+      clickable: true
+    }"
       >
-        <ng-template swiperSlide *ngFor=" let a of [1]">
+        <ng-template swiperSlide *ngFor=" let slide of slides">
           <div>
-            <h3>Compra</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores laudantium unde earum tenetur doloremque praesentium quia sequi velit quasi neque, eligendi minus, beatae fuga atque, mollitia repudiandae? Fuga, molestiae necessitatibus!</p>
+            <h3 class="intro__content--title-section ">{{slide.title}}</h3>
+            <p>{{slide.description}}</p>
           </div>
         </ng-template>
       </swiper>
