--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -32,22 +32,28 @@
     </ion-card-content>
   </ion-card>
   <div class="container">
-    <ion-item>
-      <ion-label position="stacked">Descripción: </ion-label>
-      <ion-input disabled="true"> Venta de articulos variados</ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="stacked">Teléfono: </ion-label>
-      <ion-input disabled="true"> +502 45688556</ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="stacked">Correo: </ion-label>
-      <ion-input disabled="true"> example@company.com</ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="stacked">Descripción: </ion-label>
-      <ion-input disabled="true"> Carretera al Salvador Guatemala</ion-input>
-    </ion-item>
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="stacked">Descripción: </ion-label>
+            <ion-input disabled="true"> Venta de articulos variados</ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label position="stacked">Teléfono: </ion-label>
+            <ion-input disabled="true"> +502 45688556</ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label position="stacked">Correo: </ion-label>
+            <ion-input disabled="true"> example@company.com</ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label position="stacked">Descripción: </ion-label>
+            <ion-input disabled="true"> Carretera al Salvador Guatemala</ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
 
 </ion-content>
