--- a/src/app/markteplace/components/category-card/category-card.component.scss
+++ b/src/app/markteplace/components/category-card/category-card.component.scss
@@ -21,6 +21,7 @@ ion-card img {
     &__title{
         text-align: center;
         font-weight: bold;
+        font-size: 0.9rem;
     }
     &__image {
         width: 100%;
