--- a/src/app/markteplace/components/profile-card/profile-card.component.scss
+++ b/src/app/markteplace/components/profile-card/profile-card.component.scss
@@ -25,17 +25,17 @@ ion-card-title  {
 .profile{
     width: 100%;
     height: 100%;
-    margin: 0 0.3em;
-    padding: 0.5em;
-    border-radius: 0.5em;
+    margin: 0 0.3rem;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
     display:grid;
     grid-template-rows: 2fr 0.5fr 0.5fr 1fr;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;    
 
     &__image-avatar{
       border-radius: 50%;
-      height: 4.5em;
-      width: 4.5em;
+      height: 4.5rem;
+      width: 4.5rem;
       margin: auto;
       padding: auto;
     }
@@ -59,7 +59,7 @@ ion-card-title  {
       &--heart{
         margin: auto;
         padding: auto;
-        font-size: 2em;
+        font-size: 2rem;
         color: var(--ion-color-favorite);
         
       }
