Add splash resources

--- a/src/app/markteplace/pages/notifications/notifications.page.html
+++ b/src/app/markteplace/pages/notifications/notifications.page.html
@@ -37,6 +37,20 @@
         </ion-label>
       </ion-item>
     </ion-card>
+    <ion-card>      
+      <ion-item lines="none" >
+        <ion-avatar slot="start">
+          <ion-icon name="notifications-circle-outline"></ion-icon>
+        </ion-avatar>
+        <ion-label>
+          <b>
+            Cotizaciones
+          </b> <br>
+          <p>Tienes 4 nuevas ofertas para tu cotiación No. 3453</p>
+          <div class="time">Hace 3 días</div>
+        </ion-label>
+      </ion-item>
+    </ion-card>
   </ion-list>
 
 </ion-content>
