--- a/src/app/markteplace/pages/detail-profile/detail-profile.page.html
+++ b/src/app/markteplace/pages/detail-profile/detail-profile.page.html
@@ -93,11 +93,26 @@
             />
           </ion-avatar>
           <ion-label>
-            <h2>Finn</h2>
-            <h3>I'm a big deal</h3>
-            <p>Listen, I've had a pretty messed up day...</p>
+            <h2>Juan Perez</h2>
+            <h3><p><ion-icon name="star"></ion-icon> 4</p></h3>
+            <p>Una exelente atención.</p>
           </ion-label>
         </ion-item>
+
+        <ion-item>
+          <ion-avatar slot="start">
+            <img
+              src="https://www.fsmex.com/foros/data/avatars/o/21/21450.jpg?1567418343"
+            />
+          </ion-avatar>
+          <ion-label>
+            <h2>Juan Perez</h2>
+            <h3><p><ion-icon name="star"></ion-icon> 5</p></h3>
+            <p>Los productos se encuentra en excelente estado</p>
+          </ion-label>
+        </ion-item>
+
+        
       </ion-list>
     </ion-list>
   </ion-card-content>
